Use request query for condensed or full format
