# doc/api-doc.yml
@@ -39,18 +39,13 @@ paths:
       description: Lists available QIX Engines in a condensed format.
       produces:
         - application/json; charset=utf-8
-      responses:
-        '200':
-          description: successful operation
-          schema:
-            type: array
-            items:
-              $ref: '#/definitions/containerInfo'
-  /engines/full:
-    get:
-      description: Lists available QIX Engines in a verbose format.
-      produces:
-        - application/json; charset=utf-8
+      parameters:
+        - name: format
+          in: query
+          description: If result should be in full or condensed format.
+          required: false
+          type: string
+          default: full
       responses:
         '200':
           description: successful operation
